gio/gapplication test is failing on FreeBSD 12
Job #368557 failed for b482a5c1:
# random seed: R02S1248570762bd60c07454a939e94daec0
1..16
# Start of gapplication tests
ok 1 /gapplication/no-dbus
ok 2 /gapplication/no-appid
# GLib-DEBUG: posix_spawn avoided (automatic reaping requested) (fd close requested)
(/var/tmp/gitlab_runner/builds/ds83dkqQ/0/GNOME/glib/_build/gio/tests/gapplication:73083): GLib-DEBUG: 09:03:21.774: posix_spawn avoided (automatic reaping requested) (fd close requested)
ok 3 /gapplication/properties
ok 4 /gapplication/app-id
# GLib-DEBUG: posix_spawn avoided (automatic reaping requested) (fd close requested)
(/var/tmp/gitlab_runner/builds/ds83dkqQ/0/GNOME/glib/_build/gio/tests/gapplication:73083): GLib-DEBUG: 09:03:21.879: posix_spawn avoided (automatic reaping requested) (fd close requested)
The test segfaults after that.